# igarss2024_tree_clouds

./: .gitignore  Makefile  README.md  bibliography.bib  paper.ipynb  pyproject.toml
data/: README.md
docs/: paper.html
