[tool.poetry]
name = "igarss2024-tree-clouds"
version = "0.1.0"
description = ""
authors = ["Ivan Dubrovin <books.booksovich@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
