[tool.poetry]
name = "igarss2024-tree-clouds"
version = "0.1.0"
description = ""
authors = ["Ivan Dubrovin <books.booksovich@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
geopandas = "^0.14.4"
rasterio = "^1.3.10"
laspy = "^2.5.3"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
